# TDDRAGON

./: .cursorrules  .dockerignore  .env.example  .gitignore  Makefile  PR_DESCRIPTION.md  QUICKSTART.md  README.md  RELEASE_INSTRUCTIONS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest-unit.ini  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh
docker/base/: Dockerfile
docker/demo-api/: Dockerfile
docker/log-collector/: Dockerfile
docker/log-viewer/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
docs/: MAKEFILE.md  POSTGRESQL.md  TESTING.md
docs/releases/: v.0.2.0.md  v0.1.0.md  v0.3.0.md  v0.3.1.md
docs/version/: 0.1.0.md  0.3.0.md
src/endpoints/: __init__.py
src/endpoints/demo_api/: __init__.py  main.py
src/endpoints/demo_api/alembic/: __init__.py  env.py
src/endpoints/demo_api/application/: __init__.py  create_item.py  list_items.py
src/endpoints/demo_api/domain/: __init__.py  models.py  repositories.py
src/endpoints/demo_api/infrastructure/: __init__.py  models.py  repositories.py
src/endpoints/demo_api/presentation/: __init__.py  dependencies.py  health.py  routes.py  schemas.py
src/endpoints/log_collector/: __init__.py  alembic.ini  main.py
src/endpoints/log_collector/alembic/: __init__.py  env.py
src/endpoints/log_collector/application/: __init__.py  calculate_uptime.py  collect_logs.py  parse_logs.py
src/endpoints/log_collector/domain/: __init__.py  models.py  repositories.py
src/endpoints/log_collector/infrastructure/: __init__.py  healthcheck.py  log_reader.py  models.py  repositories.py  uptime_worker.py
src/endpoints/log_collector/presentation/: __init__.py  dependencies.py  routes.py  schemas.py
src/endpoints/log_viewer/: __init__.py  main.py
src/endpoints/log_viewer/application/: __init__.py  export_logs.py  get_statistics.py  query_logs.py  query_uptime.py
src/endpoints/log_viewer/domain/: __init__.py  models.py  repositories.py
src/endpoints/log_viewer/infrastructure/: __init__.py  auth.py  repositories.py
src/endpoints/log_viewer/presentation/: __init__.py  dependencies.py  routes.py  schemas.py
src/shared/: __init__.py
src/shared/exceptions/: __init__.py  validation_error.py
src/shared/infrastructure/: __init__.py  database.py  logger.py
src/shared/models/: __init__.py  base.py
src/shared/utils/: __init__.py  validation.py
tests/: __init__.py  conftest.py
tests/endpoints/: __init__.py
tests/endpoints/demo_api/: __init__.py  conftest.py
tests/endpoints/demo_api/e2e/: __init__.py  test_acceptance.py  test_api.py
tests/endpoints/demo_api/integration/: __init__.py  test_health.py  test_main.py  (+1 more)
tests/endpoints/log_collector/: __init__.py  conftest.py
tests/endpoints/log_viewer/: __init__.py
tests/integration/: __init__.py
tests/regression/: __init__.py
tests/shared/: __init__.py
tests/shared/exceptions/: test_validation_error.py
tests/shared/infrastructure/: __init__.py  test_database.py  test_logger.py
tests/shared/integration/: __init__.py  test_database_integration.py  test_logger_and_validation.py  test_logger_integration.py  test_validation_and_exceptions.py  test_validation_integration.py
tests/shared/regression/: __init__.py  test_exceptions_regression.py  test_infrastructure_regression.py  test_validation_regression.py
tests/shared/utils/: test_validation.py
(+101 files in other folders)
